@@ -246,7 +246,7 @@ OBJECTS_TREE = {'functions': sorted(['pa_count_devices', 'pa_get_default_input',
                                     'pa_list_devices', 'pa_count_host_apis', 'pa_list_host_apis', 'pa_get_default_host_api', 
                                     'pm_count_devices', 'pm_list_devices', 'sndinfo', 'savefile', 'pa_get_output_devices', 
                                     'pa_get_input_devices', 'midiToHz', 'sampsToSec', 'secToSamps', 'example', 'class_args', 
-                                    'pm_get_default_input', 'midiToTranspo', 'getVersion']),
+                                    'pm_get_default_input', 'midiToTranspo', 'getVersion', 'reducePoints']),
         'PyoObject': {'analysis': sorted(['Follower', 'Follower2', 'ZCross']),
                       'controls': sorted(['Fader', 'Sig', 'SigTo', 'Adsr', 'Linseg', 'Expseg']),
                       'dynamics': sorted(['Clip', 'Compress', 'Degrade', 'Mirror', 'Wrap', 'Gate']),
